apps/lnd/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lnd

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lnd
  template:
    metadata:
      labels:
        app: lnd
    spec:
      containers:
      - name: lnd
        image: code.liv.io/liv/lnd
        imagePullPolicy: IfNotPresent
        workingDir: /
        ports:
        - name: network
          containerPort: 9735
          protocol: TCP
        - name: rest
          containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 10000
          runAsUser: 10000
        volumeMounts:
        - name: data
          mountPath: /var/local/lnd/data
      imagePullSecrets:
      - name: code.liv.io
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
