apps/lnd/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: lnd
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.serverstransport: "lnd-insecure-transport@kubernetescrd"

spec:
  type: ClusterIP
  ports:
  - name: lnd-rest
    port: 8080
    targetPort: lnd-rest
    protocol: TCP
  selector:
    app: lnd

---

apiVersion: v1
kind: Service

metadata:
  name: lnd-p2p

spec:
  type: LoadBalancer
  ports:
  - name: lnd-network
    port: 9735
    targetPort: lnd-network
    protocol: TCP
  selector:
    app: lnd
